--- a/todo.txt
+++ b/todo.txt
@@ -3,12 +3,12 @@
 +Clicking on a book should take you to the show page
 
 +Bootstrap
--Github
--Heroku
++Github
++Heroku
 
--Show page should have a read button
--Read button should take you to read page
--Reading should update current page
++Show page should have a read button
++Read button should take you to read page
++Reading should update current page
 
 -Show page should have an edit button
 -Edit button should take you to edit page
