--- a/todo.txt
+++ b/todo.txt
@@ -23,8 +23,8 @@ x Gets created on read
 Stats
 x Display stats below read
 x Started, pace, finish date
-- Show bookmarks table
-- On update, redirect to stats with anchor
+? Show bookmarks table
+? On update, redirect to stats with anchor
 
 All Stats
 - Have a page with all stats
@@ -32,6 +32,7 @@ All Stats
 
 
 Add support for kindle books
+Style all books page
 
 ----old line----
 -Show page should have an edit button
