--- a/todo.txt
+++ b/todo.txt
@@ -33,8 +33,9 @@ All Stats
 User stuff
 x Creating a book assigns it to current user
 x Signing up signs you in
-- Conditional sign up/sign in in nav bar
+x Conditional sign up/sign in in nav bar
 - Only list current users books
+- Remember me
 - If not signed in maybe show like a 'total books, total pages' type stats?
 
 Add support for kindle books
