--- a/todo.txt
+++ b/todo.txt
@@ -42,6 +42,12 @@ Add support for kindle books
 Style all books page
 Convert old erb templates to slim
 Way to finish books.  Open/closed books
+
+
+Little things
+-strip lower sign in email
+-when adding book make pages a number field
+-focus on form pages when navigating to them
 ----old line----
 -Show page should have an edit button
 -Edit button should take you to edit page
