Added basic kindle support

--- a/todo.txt
+++ b/todo.txt
@@ -2,13 +2,14 @@ Finishing Books
 x After 'reading' show finish button which finishes a book
 - Add a new 'finished books' list to main page
 
-- Fix utc issue breaking tests
+x Fix utc issue breaking tests
 
 Kindle Books
-- Add kindle boolean and actual pages to book
+- Add kindle boolean to book
 - Kindle books should display calculated page info
 - Kindle books should show percent after and a percent sign in the read box as placeholder
 - Total stats should reflect calculated pages not percent pages
+- Add explanation of kindle checkbox on new book page (ie, put in the total pages not 100)
 
 xBooks page should let you create a book
 xBooks page should list all books
