--- a/todo.txt
+++ b/todo.txt
@@ -13,6 +13,22 @@ x Kindle books should show percent after and a percent sign in the read box as p
 - Total stats should reflect calculated pages not percent pages
 - Add explanation of kindle checkbox on new book page (ie, put in the total pages not 100)
 
+- Update rails readme
+
+Stats Ideas
+- Total Pages
+- Total Books
+# Monthly/weekly stats?  Best month/week
+# last 4 weeks?
+Little things
+-round up for days left
+-strip lower sign in email
+-when adding book make pages a number field
+-focus on form pages when navigating to them
+
+
+----------- DONE ------------
+
 xBooks page should let you create a book
 xBooks page should list all books
 xClicking on a book should take you to the show page
@@ -58,11 +74,7 @@ Convert old erb templates to slim
 Way to finish books.  Open/closed books
 
 
-Little things
--round up for days left
--strip lower sign in email
--when adding book make pages a number field
--focus on form pages when navigating to them
+
 
 ----old line----
 -Show page should have an edit button
