--- a/todo.txt
+++ b/todo.txt
@@ -5,8 +5,9 @@ x Total Books
 # last 4 weeks?
 
 Little things
--when adding book make pages a number field
--focus on form pages when navigating to them
+- when adding book make pages a number field
+- focus on form pages when navigating to them
+x tests always pass
 
 
 ----------- DONE ------------
