--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,7 @@
-- Remember me
-  - Rake task to generate tokens for existing users
+x Fix historical pace on main page
+
+x Remember me
+  x Rake task to generate tokens for existing users
 - Edit a book
 - Log out
   - Destroy auth token from cookie
@@ -15,6 +17,7 @@ Little things
 - when adding book make pages a number field
 - focus on form pages when navigating to them
 x tests always pass
+- favicon
 
 
 ----------- DONE ------------
